# flask-api-qa-showcase

./: .gitignore  README.md  lefthook.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: app.py  schemas.py
backend/models/: models.py
instance/: site.db
portfolio/: portfolio-img-1.avif  portfolio-img-2.avif  portfolio.json
tests/: conftest.py
tests/docs/: README.md
tests/integration/: test_workflow.py
tests/performance/: locustfile.py
tests/smoke/: test_health.py
tests/unit/: test_employees.py  test_shifts.py  test_tui.py
tui/: __init__.py  app.py  client.py  employees_tab.py  logs_tab.py  shifts_tab.py
